<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Allads</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="all_ads">Allads</string>
    <string name="login_with">Login with</string>
    <string name="sign_in">Sign in</string>
    <string name="all_ads_comp_name">MEGHALAYA ALL ADVERTISEMENTS</string>
    <string name="sign_up">Sign up</string>
    <string name="user_mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="create_account_sign_up">Sign up to get started</string>
    <string name="user_name">User name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_account">Already have an account? Sign in</string>
    <string name="category">user type</string>
    <string name="validate_mobile_number">Enter valid mobile number</string>
    <string name="enter_user_name">Enter valid user name</string>
    <string name="password_can_be">password length should be between 6 and 20</string>
    <string name="password_not_match">password doesn\'t match</string>
    <string name="otp">OTP</string>
    <string name="verify_otp_msg">Verify your mobile number</string>
    <string name="verification_sub_msg">Enter OTP just send you on : </string>
    <string name="edit_mobile_number">edit mobile number</string>
    <string name="verify">Verify</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_save">Confirm &amp; Save</string>
    <string name="confirm_price_limit">Confirm ads price &amp; limit</string>
    <string name="resend">resend</string>
    <string name="resend_otp_msg">didn\'t receive OTP?</string>
    <string name="not_valid_mobile_number">phone number is not valid.</string>
    <string name="opt_wrong">verification failed, Invalid otp</string>
    <string name="error_quota_exceeded">The SMS quota for the project has been exceeded</string>
    <string name="key_user_login_data">key_user_login_data</string>
    <string name="mobile_no_already_reg">mobile already register with allads</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="is_from_sign_up">is_from_sign_up</string>
    <string name="key_mobile_no">key_moible_no</string>
    <string name="key_errors">key_errors</string>
    <string name="invalid_password">Invalid user id and password</string>
    <string name="mobile_not_reg_sign_up_now">Mobile number is not register, SIGN UP !</string>
    <string name="invalid_req">Invalid request</string>
    <string name="is_from_login">is_from_login</string>
    <string name="key_user_mst">key_user_mst</string>
    <string name="key_user_data">key_user_data</string>
    <string name="update_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="key_is_from_login">key_is_from_login</string>
    <string name="key_sign_up_model">key_sign_up_model</string>
    <string name="forgot_password">Forget Password</string>
    <string name="is_from_forget_password">is_from_forget_password</string>
    <string name="forgot_password_msg">Enter your phone number below to\nreceive your password reset instruction</string>
    <string name="password_updated">Password updated successfully</string>
    <string name="title_activity_admin_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="key_is_from_admin_login">key_is_from_admin_login</string>
    <string name="key_admin_mst">key_admin_mst</string>
    <string name="title_ads">All Ads</string>
    <string name="title_set_up">Set up</string>
    <string name="title_setting">Setting</string>
    <string name="total_user">Total Users</string>
    <string name="total_ads">Active Ads</string>
    <string name="price_per_word">Price per\nword ₹</string>
    <string name="price_per_img">Price per\nimage</string>
    <string name="word_limit">Word limit\nper post</string>
    <string name="lumpsum_amount">Lumpsum\nprice ₹</string>
    <string name="lumpsum_word_limit">Lumpsum word\nlimit</string>
    <string name="time_limit">Time limit\nDay</string>


    <string name="rps">₹</string>
    <string name="edit_ads_price">Edit advertisement prices</string>
    <string name="key_ads_price_mst">key_ads_price_mst</string>
    <string name="ads_time_limit">Ads time limit - Day</string>
    <string name="reset_price">Reset price</string>
    <string name="save">SAVE DETAILS</string>
    <string name="plase_enter_valid_value">please enter valid value</string>
    <string name="key_updated_ad_price_mst">key_updated_ad_price_mst</string>
    <string name="error">ERROR !!</string>
    <string name="ok">OK</string>
    <string name="server_error">Sever error please try agin later</string>
    <string name="menu_admin_logout">Logout</string>
    <string name="are_you_sure_logout">Are you sure want to logout ?</string>
    <string name="logout">Logout</string>
    <string name="download_now">"Download Allads app : "</string>
    <string name="share_subject">Share ads from Allads</string>
    <string name="share_using">share ads using :</string>
</resources>